Added minio, photo upload api
